test/part2/success/typage_pointer1-2.c
int main(){
	
	int *i;
	char *c;	

	i = 5;
	c = 'c';
}
