test/part2/fail/typage_main1-3.c

int main(){

}

int main(int arg, char *argc){

}
